@@ -1,0 +1,82 @@
+package Truncheon.API.Dragon;
+
+public class AccountCreate 
+{
+    private void AccountCreationLogic()
+    {
+
+    }
+
+    private boolean authenticateCurrentUser()
+    {
+        boolean authenticationStatus = false;
+
+        return authenticationStatus;
+    }
+
+    /*
+    ----------------------------------------------------------------------------------
+    SECTION NAME : ACCOUNT CREDENTIAL VALIDATION LOGIC
+    OBJECTIVE    : A set of methods which will check if the credentials entered are
+    conforming to the rules of the system. Should any of the rules are not followed,
+    the program shall ask to re-enter the credential that is violating the guideline.
+    This also means that if the password rules are not followed, the user will need
+    to re-enter the password that conforms to the guidelines.
+    AUTHOR       : Deepak Anil Kumar (@DAK404)
+    ----------------------------------------------------------------------------------
+    */
+
+    //This can help in aborting and editing the creation of a user
+    // will display details, provide a prompt to select which credential to enter
+    private void commandCenter()
+    {
+
+    }
+    
+    //Displays a dashboard to the user, pertaining to the details entered.
+    private void credentialDashboard()
+    {
+
+    }
+
+    private void setAccountName()
+    {
+
+    }
+
+    private void setAccountUsername()
+    {
+        
+    }
+
+    private void setAccountPassword()
+    {
+        
+    }
+
+    private void setAccountSecurityKey()
+    {
+        
+    }
+
+    private void setAccountPIN()
+    {
+        
+    }
+
+    /*
+    ----------------------------------------------------------------------------------
+    END OF ACCOUNT CREDENTIAL VALIDATION LOGIC
+    ----------------------------------------------------------------------------------
+    */
+
+    private void addAccountTODatabase()
+    {
+
+    }
+
+    private void createDefaultAdministratorAccount()
+    {
+
+    }
+}
