@@ -1,0 +1,6 @@
+package Truncheon.API.Dragon;
+
+public class AccountDelete
+{
+    
+}
